public/styles/views/_cart.scss
* {
  box-sizing: border-box;

  .cart-page {
    width: 100%;
    max-width: 1200px;
    // height: 100vh;
    position: relative;
    top: 75px;
    margin: 0 auto;
    padding: 0 14px;
    background-color: gold;
    h2 {
      font-family: $main;
      font-size: 1.875rem;
      // padding: 20px 0;
    }
    .fixed-cart-header {
      @include width-height(100%, 115px);
      @include flex-j-a(space-between, space-between);
      flex-direction: column;
      background: tan;

      .buttons {
        @include flex-j-a(flex-end, center);
        padding-bottom: 5px;

        a {
          text-decoration: none;
        }
        .button-clear {
          @include flex-j-a(center, center);
          @include width-height(160px, 33px);
          margin: 0 6px;
          background: white;
          color: $fake-black;
          // border-radius: 3px;
          border: black 1px solid;
          transition: color 0.3s;
          transition: background 0.3s;
          h2 {
            font-family: $main;
            font-size: 14px;
            font-weight: 500;
            text-transform: uppercase;
          }
        }
        .button-clear:hover {
          cursor: pointer;
          background: #00b8fd;
          color: white;
        }
        .button-green {
          @include flex-j-a(space-between, center);
          @include width-height(140px, 40px);
          background: #27d000;
          padding: 1px 10px;
          color: white;
          h2 {
            text-transform: uppercase;
            font-family: $button-text;
            font-weight: bold;
            font-size: 16px;
            margin-left: 6px;
          }
        }
        .button-green:hover {
          cursor: pointer;
          background-color: #21b600;
          color: white;
        }
      }
    }
  }
  /* Cart Table (column names)
------------------------------------------------------------- */
  .table-header {
    display: flex;
    justify-content: space-between;
    width: 100%;
    max-width: 1200px;
    height: 37px;
    color: $fake-black;
    // background-color: cadetblue;
    font-family: $main;
    font-size: 1.25rem;
    text-transform: uppercase;
    padding-top: 4px;
    border-bottom: 1px solid #ccc;

    #product {
      width: 200px;
      // background-color: rebeccapurple;
    }

    #ghost-description {
      width: 339px;
      // background-color: teal;
    }

    #quantity {
      width: 287px;
      // background-color: tomato;
    }

    #price {
      width: 135px;
      // background-color: lightblue;
    }

    #total-price {
      width: 138px;
      white-space: nowrap;
      // background-color: pink;
    }
  }
  /* Items in cart
------------------------------------------------------------- */
  .items-incart {
    margin: 0 15px;
    padding: 15px 0;
    border-bottom: 1px #cccccc solid;
    @include flex-j-a();
    .left {
      .img-container {
        @include width-height(174px, 174px);
        @include flex-j-a(center, center);
        border: 1px #cccccc solid;
        img {
          max-height: 100%;
          max-width: 130px;
          height: auto;
          width: auto;
        }
      }
    }
    .right {
      margin-left: 8px;
      width: 100%;
      height: 100%;
      @include flex-j-a(flex-start, center);

      .one {
        @include flex-j-a();
        flex-direction: column;
        width: 38%;
        h2 {
          font-family: $main;
          font-size: 20px;
          color: $med-blue;
        }
        h3 {
          margin-top: 10px;
          font-family: $main;
          color: #999999;
          font-size: 13px;
        }
      }
      .two {
        width: 32%;
        .itm-quan {
          @include width-height(56px, 30px);
          border-color: #cccccc;
          border-radius: 3px;
          padding: 0 10px;
        }
        h2 {
          text-transform: uppercase;
          margin-top: 10px;
          font-family: $main;
          font-size: 14px;
          cursor: pointer;
        }
      }
      .three {
        width: 15%;
        h2 {
          font-weight: normal;
          font-family: $main;
          font-size: 20px;
          color: black;
        }
      }
    }
  }

  .total {
    @include flex-j-a(flex-end);
    .subTotal {
      @include flex-j-a(flex-start);
      flex-direction: column;
      @include width-height(375px, 200px);
      margin-right: 20px;
      .row {
        @include flex-j-a(space-between, center);
        width: 100%;
        margin-top: 25px;
        h2 {
          font-family: $main;
          font-weight: bold;
          font-size: 20px;
          color: black;
        }
        h3 {
          font-family: $main;
          font-weight: lighter;
          font-size: 18px;
          color: $fake-black;
        }
        h4 {
          font-family: $main;
          font-size: 12px;
          color: black;
          margin-top: -25px;
        }
      }
    }
    .bot-bar {
      padding-bottom: 25px;
      border-bottom: 1px solid #cccccc;
    }
  }
}

